Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,7 +8,9 @@
 <body>
     <hi>Olá, Mundo!</hi>
     <hr>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae nihil ratione natus totam! Ex beatae facere consequatur corporis ad minima nesciunt, ea tenetur nobis ut magni in tempore iste.</p> 
-    
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae nihil ratione natus totam! 
+    Ex beatae facere consequatur corporis ad minima nesciunt, ea tenetur nobis ut magni in tempore iste.</p> 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Modi minima, quas porro facere voluptates, laborum commodi facilis vero dolorum tenetur voluptas architecto exercitationem illo vitae in quia perferendis quo quos.</p>
 </body>
 </html>
